# picopotgauge

./: CMakeLists.txt  README.md  gauge.c  gauge.h  main.c  picopotgauge.jdebug  potentiometer.c  potentiometer.h
